# otus-python-2020-11

./: .gitignore  .gitmodules  README.md
DZ-3_asyncio/api_demo/: alembic.ini  main.py  movies.postgres  movies.sqlite
DZ-3_asyncio/api_demo/alembic/: env.py
DZ-3_asyncio/api_demo/models/: base.py  movie.py  post.py
DZ-3_asyncio/asyncio_api_demo/: main.py  movies.postgres  requirements.txt
DZ-3_asyncio/asyncio_api_demo/models/: base.py  movie.py  post.py
django_demo/myproject/: Dockerfile
django_demo/myproject/myproject/: __init__.py  settings.py  urls.py
django_demo/myproject/razlivalka/: models.py  tests.py
docker_demo/flask_demo_dev/: Dockerfile  main
docker_demo/flask_demo_dev/templates/: base.html
docker_demo/flask_demo_dev/views/: settings.py
flask_demo/: main  requirements.txt
flask_demo/templates/settings/: index.html
flask_demo/views/: deploy.py
flask_demo_docker/: Dockerfile  docker-compose.yaml  pyproject.toml
flask_demo_docker/razlivalka/: app.py  config.py  env_vars  main  mydb
lesson-3_git-shell/: main.py
lesson-8_dataclasses/: constants.py  main.py  plane.py  transport.py  truck.py
myproject/: docker-compose.yaml  pyproject.toml
myproject/myproject/: __init__.py
myproject/razlivalka/: admin.py  apps.py  forms.py  model.py  tests.py
myproject/razlivalka/.gitnub/workflows/: run_tests.yaml
myproject/razlivalka/migrations/: 0001_initial.py
myproject/razlivalka/templates/: base.html
myproject/razlivalka/templates/devices/: index.html
myproject/razlivalka/views/: devices.py  settings.py
(+18 files in other folders)
