[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "web-toolkit for netmiko"
authors = ["Evdokimov Oleg <o.evdokimov@corp.mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.6"
Django = "^3.2"
netmiko = "^3.3.3"
pysnmp = "^4.4.12"
beautifultable = "^1.0.1"
requests = "^2.25.1"
python-dotenv = "^0.17.0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
